--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -15,14 +15,14 @@
 |[CategoryInit|Initialization and Shutdown]] 
 |[[http://hg.libsdl.org/SDL/file/default/include/SDL.h SDL.h] 
 |-
+|[CategoryHints|Configuration Variables]]
+|[[http://hg.libsdl.org/SDL/file/default/include/SDL_hints.h SDL_hints.h]
+|-
 |[CategoryError|Error Handling]] 
 |[[http://hg.libsdl.org/SDL/file/default/include/SDL_error.h SDL_error.h] 
 |-
 |[CategoryVersion|Querying SDL Version]] 
 |[[http://hg.libsdl.org/SDL/file/default/include/SDL_version.h SDL_version.h] 
-|-
-|[CategoryHints|SDL Configuration Variables]]
-|[[http://hg.libsdl.org/SDL/file/default/include/SDL_hints.h SDL_hints.h]
 |}
 
 
