--- a/CategoryAPI.mediawiki
+++ b/CategoryAPI.mediawiki
@@ -6,6 +6,10 @@
 = SDL 1.3 API by Name =
 
 
+== Hints ==
+
+<<FullSearch(category:CategoryDefine)>>
+
 == Enumerations ==
 
 <<FullSearch(category:CategoryEnum -SDLEnumTemplate)>>
