--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -136,193 +136,6 @@ A good place to look for additional information on MoinMoin wiki markup is  [htt
 
 
 
-<span id="spacing"></span>
-=== Spacing ===
-Both vertical and horizontal spacing can be rendered differently depending upon the combination of formatting markup that is used.  If your formatting is not working out the way you want check the notes below on other formatting that you have used nearby, especially the [[#lists|Lists]] section, that may be affecting how the local formatting is interpreted.
- ''Example'': If you try to pick up a numbered list down the page after using unnumbered lines at the same indent level, the next number in the numbered list may count the unnumbered lines.
-: See [[#problems1|Some Known Problems and Solutions]] below for notes on known markup misbehavior.
-
-
-<span id="break"></span>
-==== Hard Line Break ====
-''Markup'': ```<br/>```
-* Place the above markup wherever you want to force the following text onto the next line but keep it in the same paragraph.<br/>
-* ''Note'': You cannot change indent level immediately following a hard line break.  (The next line is still part of the same paragraph.)
-''Example'': Typing the following in the text editor 
- ```
-  1 first line<<BR>>  2 this line typed on same line after hard line break markup, same indent<<BR>>   3 this line typed on same line after hard line break markup, +1 indent<<BR>>  4 this line typed on same line after hard line break markup, -1 indent<<BR>>  . 5 this line typed on same line after hard line break markup, same indent with period<<BR>>6 this line typed on same line after hard line break markup without any indent
-```
-   ''generates''
-: 1 first line<br/>  2 this line typed on same line after hard line break markup, same indent<br/>   3 this line typed on same line after hard line break markup, +1 indent<br/>  4 this line typed on same line after hard line break markup, -1 indent<br/>  . 5 this line typed on same line after hard line break markup, same indent with period<br/>6 this line typed on same line after hard line break markup without any indent
-
-
-<span id="indent"></span>
-==== Indenting ====
-''<<Color2(red,Important!)>>'' Indenting often leads to inadvertent creation of an unnumbered list.  Lists follow very limiting, sometimes difficult to figure out, rules.  See [[#lists|Lists]] below if your indenting is not working the way you think it should.
-
-''Markup'': Place blank spaces at the beginning of a line of text to create indents. (this line has 1 space)
-* Use one space for each indent level desired. (this line has 2 spaces)
-
-''Note'': Use a period (.) after the spaces and before the text (usually separated by a space after but not necessary) to ensure that the indent does not become a bullet or numbered list.  Note that this markup will sometimes resolve problems when the spacing from line to line is not what you expected. (this line has 2 spaces and a starting period)
-
-''Example'': ``` . This line starts with a period   ``` 
-  ''generates''<br/>
-: This line starts with a period
-
-
-<span id="vertical"></span>
-''Note'': Paragraph breaks and spaces between lines and paragraphs (which may be individual lines) are parsed with different spacing depending upon the context (especially relative indent level).  It may take some playing around with the markup to get the spacing you want, or it may be that you will have to accept a certain amount of pre-determined spacing between lines.
-
-''Example'': Typing the following in the text editor
- ```
- 1 hard return followed by next line same indent
- 2 hard return followed by next line +1 indent
-  3 hard return followed by next line same indent using period
-  . 4 hard return followed by next line same indent, no period
-  5 hard return followed by next line -1 indent
- 6 hard return after hard line break markup, followed by next line same indent<<BR>>
- 7<<BR>> 8 next line typed on same line after hard line break markup, same indent
-
- 9 next line typed after double Enter (1 blank line), same indent, no starting period
-
- . 10 last line typed after double Enter (1 blank line), same indent, with starting period
-```
-  ''generates''
-: 1 hard return followed by next line same indent
- 2 hard return followed by next line +1 indent
-  3 hard return followed by next line same indent using period
-: 4 hard return followed by next line same indent, no period
-  5 hard return followed by next line -1 indent
- 6 hard return after hard line break markup, followed by next line same indent<br/>
- 7<br/> 8 next line typed on same line after hard line break markup, same indent
-
- 9 next line typed after double Enter (1 blank line), same indent, no starting period
-
-: 10 last line typed after double Enter (1 blank line), same indent, with starting period
-
-''Note'': To ensure that the next line is treated as a separate line (not necessarily a separate paragraph!) try the following:
- a. use two consecutive hard returns (```Enter key```)
-  ~-''Note'': this will leave a larger space between lines (usually a double-space) but it is treated as a new paragraph-~
- a. use a [[#break|hard line break]]
- a. [[#indent|indent]] more (farther right)
- a. use a [[#indent|period]] at the beginning of the line after indenting the same amount or less
- a. [[#indent|indent]] less (farther left)
-
-~-[[#ToC|Return to Table of Contents]]-~
-
-
-<span id="lists"></span>
-=== Lists ===
-<<Color2(red,''Important!'')>> Anything that interrupts a list, except a list item indented further right, will potentially end the list!  This may affect the indenting, count, or symbols if you try to restart the list below the interruption.  This may or may not be able to be overcome, so be careful with adding anything that interrupts a list!
-
-__Unnumbered Lists__
-
-See [[#indent|Indenting]] above.
-
-
-__Bullet Lists__
-
-: ''Markup'': Begin a line with a space followed by an asterisk to create a bulleted line of text (space after asterisk is optional but seems to be preferred)
-
-: ''Example'': ```  * First line of bullet list```<br/>
-   ''Generates'':
-* First line of bullet list<br/>
-
-__Numbered Lists__
-
- ''Markup'': Begin a line with a space followed by the number 1 and a period (or choose another number format such as i or a).
-
- ''Note'': Each line that should be part of the list begins with the same starting number. The wiki will generate sequential numbers in preview mode or after saving.
-
- ''Example'': 
-  ```
- 1. First line of numbered list
- 1. Second line of numbered list
-```
-
-: ''Generates'':
-: 
-  1. First line of numbered list
-  1. Second line of numbered list
-
-More wiki markup for lists can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLists HelpOnLists]
-
-
-<span id="problems1"></span>
-==== Some Known Problems and Solutions ====
-
-<<Color2(green,This is a new section and is currently undergoing revisions.  Please forgive any incomplete or displaced portions and odd/inconsistent formatting.)>>
-
-
-{|
-|
-|<bgcolor="#EDEDED">''Problem Category'': Vertical spacing isn't working properly
-|-
-|<( |3 30%>''Problem'': My text is on another line in the editor but grouped with the previous line in the preview/saved version
-|''Cause'': Using a hard return (Enter key) at the end of a line is often '''not''' parsed as a line break.
-|-
-|''Solution 1'': Press the Enter key ''twice'' to put a space between paragraphs
-|-
-|''Solution 2'': Use a [[#break|Hard Line Break]].
-|-
-|<( |5 30%>''Problem'': There is too much/little space between lines of text
-|''Cause'': Most of the vertical spacing in this wiki is fixed and is determined based on other formatting choices.
-|-
-|''Solution'': You can force __additional__ space between lines of text using [[#break|Hard Line Breaks]].
-|-
-|''Note'': You '''cannot''' force __less__ space between lines of text in separate paragraphs.  The only option for keeping lines of text close together is to use [[#break|Hard Line Breaks]] to keep lines within a paragraph.
-|-
-|<<Color2(red,''Important!'')>> There are limits to how you can change formatting within a paragraph.
-|-
-|''Note'': Indenting can affect vertical spacing.  See ''[[#vertical|Note]]'' above for details.
-|}
-
-{|
-|
-|<bgcolor="#EDEDED">''Problem Category'': My list isn't working properly
-|-
-|<( |9 30%>''Problem'': The __numbering__ in my list started over
-|''Cause'': Most likely your numbering restarted because something broke the list into two parts.
-|-
-|''Solution 1'': Remove the interfering item or change it's indent to be subordinate in the list (add more spaces to indent more).
-|-
-|''Note'': This is the most successful solution.
-|-
-|''Solution 2'': Try forcing a new starting number/letter.
-|-
-|''Markup'': place <code>#value</code>, where # is the hash symbol and <code>value</code> is a number (like 2, 3, 4...; '''not''' the character you want), immediately after the starting numbering markup.
-|-
-|''Example'': ``` 1.#4 text``` should force the list item to begin with the number 4.<br/>{{{a.#4 text}}} should force the list item to begin with the letter d.
-|-
-|<<Color2(red,''Important!'')>> This fix does not always work!!!
-|-
-|''Solution 3'': Put a blank line (Enter key) between list items and then force a number (or other sequential) value by using the ''Markup'' from ''Solution 2'' above.
-|-
-|''Example'': See the Basic Format section of [http://wiki.libsdl.org/moin.cgi/SGTutorials#Basic_Format SGTutorials] then go into edit mode to see the markup.
-|-
-|<( |4 30%>''Problem'': The __indenting__ of my next list item is wrong
-|''Cause'': The list is interrupted by another item (like a box of code) with __less indent__ (farther left) than the previous line of the list
-|-
-|''Result'': The interfering block forces the end of a list so the list begun after it is treated as a new list.  It also seems to default to a first level indent after an interruption of this type regardless of the number of spaces you actually put before your next line.
-|-
-|''Solution'': One __possible__ workaround is to place a blank line containing a ```space(s) period space``` ( . ) between the interfering content and the next line.<br/>~-''Note'': This seems to allow the wiki parser to interpret the indent count on the next line correctly but likely won't continue the list.  It does not always work!-~
-|-
-|''Note'': It may be necessary to indent one level ''less'' (farther left) than the line that is not being parsed correctly.  For example, if you want a line following an interruption to be at 3 indents, put the space-period-space fix immediately above it at 2 indents (ie: ```space space period space;  . ```).
-|-
-|<( |2 30%>''Problem'': I want to use a __mixed list__ where bullets follow numbers on the same indent level (or similar) but it just keeps numbering
-|''Cause'': This wiki seems to parse lists based on how they start and where they end.  If they are not broken/ended it seems to ignore the actual intervening markup (except usually lines starting with a period).
-|-
-|''Solution'': The same workarounds as above may or may not be able to resolve this issue as well.  Your goal is to end one list and begin the next with new formatting.  You may have to try several tricks to make this happen.
-|}
-
-<<Color2(red,''Important!'')>> Some list breaks cannot currently be fixed so you should be very careful when interrupting a list as it may force formatting you will not want.<br/>See [http://moinmo.in/MoinMoinBugs/MixedNumberedAndUnorderedLists?highlight=%28lists%29 Mixed Lists] for some discussion and examples of problems.<br/>~-''Note'': The contents at this link may change at any time and this link may not always be up to date.-~
-
-
-
-~-[[#ToC|Return to Table of Contents]]-~
-
-<br/>
-<br/>
 <span id="formatting"></span>
 === Text Formatting ===
 ''Note'': Formatting markup can usually be nested/grouped, but the order it is used in may affect whether it works as desired.  Try using multiple formatting tags in a different order or check the help if you have trouble.
@@ -421,15 +234,130 @@ More wiki markup for text formatting can be found at [http://wiki.libsdl.org/moi
 <br/>
 <br/>
 
+<span id="spacing"></span>
+=== Spacing ===
+Both vertical and horizontal spacing can be rendered differently depending upon the combination of formatting markup that is used.  If your formatting is not working out the way you want check the style guide information on other formatting that you have used nearby, especially the [[#lists|Lists]] section, that may be affecting how the local formatting is interpreted.
+ ''Example'': If you try to pick up a numbered list down the page after using indents/unnumbered lines at the same indent level, the next number in the numbered list may count the unnumbered lines or change format.
+: See [[#problems2|Some Known Problems and Solutions]] below for notes on known markup misbehavior and ways to try to circumvent it.
+
+
+<span id="break"></span>
+==== Hard Line Break ====
+''Markup'': ```<br/>```
+* Place the above markup wherever you want to force the following text onto the next line but keep it in the same paragraph.<br/>
+* ''Note'': You cannot change indent level immediately following a hard line break.  (The next line is still part of the same paragraph.)
+''Example'': Typing the following in the text editor 
+ ```
+  1 first line<<BR>>  2 this line typed on same line after hard line break markup, same indent<<BR>>   3 this line typed on same line after hard line break markup, +1 indent<<BR>>  4 this line typed on same line after hard line break markup, -1 indent<<BR>>  . 5 this line typed on same line after hard line break markup, same indent with period<<BR>>6 this line typed on same line after hard line break markup without any indent
+```
+   ''generates''
+: 1 first line<br/>  2 this line typed on same line after hard line break markup, same indent<br/>   3 this line typed on same line after hard line break markup, +1 indent<br/>  4 this line typed on same line after hard line break markup, -1 indent<br/>  . 5 this line typed on same line after hard line break markup, same indent with period<br/>6 this line typed on same line after hard line break markup without any indent
+
+
+<span id="indent"></span>
+==== Indenting ====
+''<<Color2(red,Important!)>>'' Indenting often leads to inadvertent creation of an unnumbered list.  Lists follow very limiting, sometimes difficult to figure out, rules.  See [[#lists|Lists]] below if your indenting is not working the way you think it should.
+
+''Markup'': Place blank spaces at the beginning of a line of text to create indents. (this line has 1 space)
+* Use one space for each indent level desired. (this line has 2 spaces)
+
+''Note'': Use a period (.) after the spaces and before the text (usually separated by a space after but not necessary) to ensure that the indent does not become a bullet or numbered list.  Note that this markup will sometimes resolve problems when the spacing from line to line is not what you expected. (this line has 2 spaces and a starting period)
+
+''Example'': ``` . This line starts with a period   ``` 
+  ''generates''<br/>
+: This line starts with a period
+
+
+<span id="vertical"></span>
+''Note'': Paragraph breaks and spaces between lines and paragraphs (which may be individual lines) are parsed with different spacing depending upon the context (especially relative indent level).  It may take some playing around with the markup to get the spacing you want, or it may be that you will have to accept a certain amount of pre-determined spacing between lines.
+
+''Example'': Typing the following in the text editor
+ ```
+ 1 hard return followed by next line same indent
+ 2 hard return followed by next line +1 indent
+  3 hard return followed by next line same indent using period
+  . 4 hard return followed by next line same indent, no period
+  5 hard return followed by next line -1 indent
+ 6 hard return after hard line break markup, followed by next line same indent<<BR>>
+ 7<<BR>> 8 next line typed on same line after hard line break markup, same indent
+
+ 9 next line typed after double Enter (1 blank line), same indent, no starting period
+
+ . 10 last line typed after double Enter (1 blank line), same indent, with starting period
+```
+  ''generates''
+: 1 hard return followed by next line same indent
+ 2 hard return followed by next line +1 indent
+  3 hard return followed by next line same indent using period
+: 4 hard return followed by next line same indent, no period
+  5 hard return followed by next line -1 indent
+ 6 hard return after hard line break markup, followed by next line same indent<br/>
+ 7<br/> 8 next line typed on same line after hard line break markup, same indent
+
+ 9 next line typed after double Enter (1 blank line), same indent, no starting period
+
+: 10 last line typed after double Enter (1 blank line), same indent, with starting period
+
+''Note'': To ensure that the next line is treated as a separate line (not necessarily a separate paragraph!) try the following:
+ a. use two consecutive hard returns (```Enter key```)
+  ~-''Note'': this will leave a larger space between lines (usually a double-space) but it is treated as a new paragraph-~
+ a. use a [[#break|hard line break]]
+ a. [[#indent|indent]] more (farther right)
+ a. use a [[#indent|period]] at the beginning of the line after indenting the same amount or less
+ a. [[#indent|indent]] less (farther left)
+
+~-[[#ToC|Return to Table of Contents]]-~
+
+
+<span id="lists"></span>
+=== Lists ===
+<<Color2(red,''Important!'')>> Anything that interrupts a list, except a list item indented further right, will potentially end the list!  This may affect the indenting, count, or symbols if you try to restart the list below the interruption.  This may or may not be able to be overcome, so be careful with adding anything that interrupts a list!
+
+If you have trouble with lists see [[#problems2|Some Known Problems and Solutions]] below.
+
+__Unnumbered Lists__
+
+See [[#indent|Indenting]] above.
+
+
+__Bullet Lists__
+
+: ''Markup'': Begin a line with a space followed by an asterisk to create a bulleted line of text (space after asterisk is optional but seems to be preferred)
+
+: ''Example'': ```  * First line of bullet list```<br/>
+   ''Generates'':
+* First line of bullet list<br/>
+
+__Numbered Lists__
+
+ ''Markup'': Begin a line with a space followed by the number 1 and a period (or choose another number format such as i or a).
+
+ ''Note'': Each line that should be part of the list begins with the same starting number. The wiki will generate sequential numbers in preview mode or after saving.
+
+ ''Example'': 
+  ```
+ 1. First line of numbered list
+ 1. Second line of numbered list
+```
+
+: ''Generates'':
+: 
+  1. First line of numbered list
+  1. Second line of numbered list
+
+More wiki markup for lists can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLists HelpOnLists]
+
+
 <span id="hyperlinks"></span>
 === Hyperlinks ===
 <<Color2(red,''Important!'')>>  Although this wiki automatically creates some hyperlinks, in most cases for the SDL functions, enumerations, and structures it is unable to interpret the text correctly so we have disabled automatic linking via CamelCase recognition using the following markup at the top of every page:
  ```
 #pragma camelcase off
 ```
-'''Therefore, it is necessary for you to manually create most hyperlinks!'''
+'''Therefore, it '''is''' necessary for you to manually create most hyperlinks!'''
 : ''Note'': If a hyperlink is automatically created where you __don't__ want one check to ensure that this <code>#pragma</code> markup is correct at the top of the page.  If it is not, please correct or add it.  This should resolve the issue if it is related to CamelCase text.
 
+''Action'':
 {|
 |<( |3 30%>''If'' you reference something that __has a page in the wiki__
 |''Action'': Always create a hyperlink to any existing API page.  It is preferable to create a link to any page in the wiki that is referenced.
@@ -490,7 +418,7 @@ More wiki markup for text formatting can be found at [http://wiki.libsdl.org/moi
 |''Example'': ```[http://wiki.libsdl.org/moin.cgi/Contributing#guides Style Guides]``` creates the following link with alternate text and that takes you to that anchor on the other page [http://wiki.libsdl.org/moin.cgi/Contributing#guides Style Guides]
 |}
 
- More wiki markup for tables can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLinking HelpOnLinking]
+More wiki markup for tables can be found at [http://wiki.libsdl.org/moin.cgi/HelpOnLinking HelpOnLinking]
 
 ~-[[#ToC|Return to Table of Contents]]-~
 
@@ -667,14 +595,14 @@ More (but not much) wiki markup for headings can be found at [http://wiki.libsdl
 An include enables you to copy all or a portion of a page onto another page, allowing changes to one page to be automatically updated on another.  This is especially useful for listing enumeration values for a function parameter on the function page, for example.
 
 ''Markup'': To create an Include is a 3 step process:
- 1. Place the following markup in the location where you wish the data to begin on the __recipient page__ (the page with the copy).  Replace <code><PageName></code> with the name of the page to copy from (where the original content is located).
+ ''Action 1'': Place the following markup in the location where you wish the data to begin on the __recipient page__ (the page with the copy).  Replace <code><PageName></code> with the name of the page to copy from (where the original content is located).
   ```
 <<Include(<PageName>, , , from="Start Include here.", to="##End Include here.")>>
 ```
 : ''Example'': To copy content from [[SDL_GLattr]]
    ```<<Include(<SDL_GLattr>, , , from="Start Include here.", to="##End Include here.")>>```
 
- 1. Place the following markup on the line immediately before the point where you wish to begin the include (to start copying content) on the __source page__.  
+ ''Action 2'': Place the following markup on the line immediately before the point where you wish to begin the include (to start copying content) on the __source page__.  
 : ''<<Color2(red,Important!)>>'' Replace <code><PageName></code> with the name of the page to receive the Include.  If this include will be used on more than one page add additional page names.  Linking markup may be left out.
   ```
 ##The following content is included on `<PageName>`.  Any changes between these comments will be reflected there as well.  Please use caution when editing.  Start Include here.
@@ -682,12 +610,17 @@ An include enables you to copy all or a portion of a page onto another page, all
 : ''Example'': If this include will be used on [[SDL_GL_GetAttribute]]() and [[SDL_GL_SetAttribute]]() the comment on the source page should read:
    ```##The following content is included on SDL_GL_GetAttribute and SDL_GL_SetAttribute...```
 
- 1. Place the following markup on the line immediately after the point where you want to end the include (to stop copying content) on the __source page__.
+ ''Action 3'': Place the following markup on the line immediately after the point where you want to end the include (to stop copying content) on the __source page__.
   ```
 ##End Include here.
 ```
 
-''Note'': All content between the two ##comments, beginning with the character immediately following "<code>...here.</code>" and ending with the character immediately before "<code>##End...</code>", will be copied onto the recipient page, so be careful that you intend to include ''all'' content!
+''Note'': Includes are very literal.  All content between the two <code>##comments</code>, beginning with the character immediately following "<code>The following...here.</code>" and ending with the character immediately before "<code>##End...</code>", will be copied onto the recipient page, so be careful that you intend to include ''all'' content!
+
+{|
+|<( 30%>''If'' a page has an __existing Include__ that does not contain the content that you need to include on a page
+|''Action'': Please contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to discuss it.  The resolution will depend upon the nature of the interaction between the two includes on the page and should be considered carefully.
+|}
 
 See [http://wiki.libsdl.org/moin.cgi/HelpOnMacros/Include HelpOnMacros/Include] for details if a different include becomes necessary.
 
@@ -698,6 +631,80 @@ See [http://wiki.libsdl.org/moin.cgi/HelpOnMacros/Include HelpOnMacros/Include] 
 ~-[[#ToC|Return to Table of Contents]]-~
 
 
+<span id="problems"></span>
+=== Some Known Problems and Solutions ===
+
+<<Color2(green,This is a new section and is currently undergoing revisions.  Please forgive any incomplete or displaced portions and odd/inconsistent formatting.)>>
+
+<span id="problems1"></span>
+{|
+|
+|<bgcolor="#EDEDED">''Problem Category'': Vertical spacing isn't working properly
+|-
+|<( |3 30%>''Problem'': My text is on another line in the editor but grouped with the previous line in the preview/saved version
+|''Cause'': Using a hard return (Enter key) at the end of a line is often '''not''' parsed as a line break.
+|-
+|''Solution 1'': Press the Enter key ''twice'' to put a space between paragraphs
+|-
+|''Solution 2'': Use a [[#break|Hard Line Break]].
+|-
+|<( |5 30%>''Problem'': There is too much/little space between lines of text
+|''Cause'': Most of the vertical spacing in this wiki is fixed and is determined based on other formatting choices.
+|-
+|''Solution'': You can force __additional__ space between lines of text using [[#break|Hard Line Breaks]].
+|-
+|''Note'': You '''cannot''' force __less__ space between lines of text in separate paragraphs.  The only option for keeping lines of text close together is to use [[#break|Hard Line Breaks]] to keep lines within a paragraph.
+|-
+|<<Color2(red,''Important!'')>> There are limits to how you can change formatting within a paragraph.
+|-
+|''Note'': Indenting can affect vertical spacing.  See ''[[#vertical|Note]]'' above for details.
+|}
+<span id="problems2"></span>
+{|
+|
+|<bgcolor="#EDEDED">''Problem Category'': My list isn't working properly
+|-
+|<( |9 30%>''Problem'': The __numbering__ in my list started over
+|''Cause'': Most likely your numbering restarted because something broke the list into two parts.
+|-
+|''Solution 1'': Remove the interfering item or change it's indent to be subordinate in the list (add more spaces to indent more).
+|-
+|''Note'': This is the most successful solution.
+|-
+|''Solution 2'': Try forcing a new starting number/letter.
+|-
+|''Markup'': place <code>#value</code>, where # is the hash symbol and <code>value</code> is a number (like 2, 3, 4...; '''not''' the character you want), immediately after the starting numbering markup.
+|-
+|''Example'': ``` 1.#4 text``` should force the list item to begin with the number 4.<br/>{{{a.#4 text}}} should force the list item to begin with the letter d.
+|-
+|<<Color2(red,''Important!'')>> This fix does not always work!!!
+|-
+|''Solution 3'': Put a blank line (Enter key) between list items and then force a number (or other sequential) value by using the ''Markup'' from ''Solution 2'' above.
+|-
+|''Example'': See the Basic Format section of [http://wiki.libsdl.org/moin.cgi/SGTutorials#Basic_Format SGTutorials] then go into edit mode to see the markup.
+|-
+|<( |4 30%>''Problem'': The __indenting__ of my next list item is wrong
+|''Cause'': The list is interrupted by another item (like a box of code) with __less indent__ (farther left) than the previous line of the list
+|-
+|''Result'': The interfering block forces the end of a list so the list begun after it is treated as a new list.  It also seems to default to a first level indent after an interruption of this type regardless of the number of spaces you actually put before your next line.
+|-
+|''Solution'': One __possible__ workaround is to place a blank line containing a ```space(s) period space``` ( . ) between the interfering content and the next line.<br/>~-''Note'': This seems to allow the wiki parser to interpret the indent count on the next line correctly but likely won't continue the list.  It does not always work!-~
+|-
+|''Note'': It may be necessary to indent one level ''less'' (farther left) than the line that is not being parsed correctly.  For example, if you want a line following an interruption to be at 3 indents, put the space-period-space fix immediately above it at 2 indents (ie: ```space space period space;  . ```).
+|-
+|<( |2 30%>''Problem'': I want to use a __mixed list__ where bullets follow numbers on the same indent level (or similar) but it just keeps numbering
+|''Cause'': This wiki seems to parse lists based on how they start and where they end.  If they are not broken/ended it seems to ignore the actual intervening markup (except usually lines starting with a period).
+|-
+|''Solution'': The same workarounds as above may or may not be able to resolve this issue as well.  Your goal is to end one list and begin the next with new formatting.  You may have to try several tricks to make this happen.
+|}
+
+<<Color2(red,''Important!'')>> Some list breaks cannot currently be fixed without major formatting compromises so you should be very careful when interrupting a list as it may force formatting you will not want.<br/>See [http://moinmo.in/MoinMoinBugs/MixedNumberedAndUnorderedLists?highlight=%28lists%29 Mixed Lists] for some discussion and examples of problems.<br/>~-''Note'': The contents at this link may change at any time and this link may not always be up to date.-~
+
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
 
 ------
 
