--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -12,7 +12,7 @@ This guide provides specific instructions for editing or adding your own content
 == General Guidelines ==
 '''Function pages should provide basic information about the SDL functions to allow users to most effectively utilize them in their projects.'''
 
-Please observe the following:  
+Please observe the following for all function pages:  
 * Do not post anything that you do not have permission to post publicly.
 
 * Sections other than Code Examples and Remarks should have adequate details to make them clear and useful while remaining brief wherever possible.  Code Examples and Remarks may be more extensive, as necessary.
@@ -40,17 +40,28 @@ If you believe a change is necessary please contact us at <<MailTo(ANTI SPAM wik
 <br/>
 <br/>
 === Description ===
-The Description section does not have a heading but immediately follows the page title.
+The Description section immediately follows the page title and does not have it's own heading.
 
 All function descriptions begin with:
  ```Use this function to```
 : followed by a ''clear and concise'' description of what the function does.  
 
-''Note'': Information presented in this section is limited.  Extended description information for more complicated functions should be placed in the [[#Remarks|Remarks]] section instead.  
+''Note'': Information presented in this section is meant to be limited.  Extended description information for more complicated functions should be placed in the [[#Remarks|Remarks]] section instead.  
 
-<<Color2(red,''Important!'')>> Do not create a link to the Remarks section in the description if additional information is located there.  
+<<Color2(red,''Important!'')>> Do not create a link to the Remarks section in the description if additional information is located there.  (See the above ''Note''.)
 
-''Note'': As always, if another API page is referenced in the description be sure to [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink] it and use () outside the link markup if it is a function.
+{|
+|<( 30%>''If'' __another API page__ is referenced in the description
+|''Action'': As always,  be sure to [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink] it and use () outside the link markup if it is a function.
+|-
+|<( |3 30%>''If'' __a parameter__ on that page is referenced in the description
+|''Action'': Use '''[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold]''' for the parameter name.
+|-
+|''Note'': This is a very rare occurrence.
+|-
+|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
+|}
+
 
 
 
@@ -169,21 +180,26 @@ The basic format is as follows:
 |''Example'': [[SDL_SetColorKey]]()
 |-
 |<( |2 30%>''If'' a pointer points to __something that is filled in by the function__
-|''Action'': Use the phrase <code>"filled in with"</code> in the description
+|''Action'': Use the phrase <code>filled in with</code> in the description
 |-
 |''Example'': [[SDL_QueryTexturePixels]]()
 |-
-|<( |3 30%>''If'' the description mentions a __structure that has a page__
+|<( |3 30%>''If'' the description mentions __a structure that has a page__
 |''Action'': Use the following pattern to describe the parameter:<br/><code>The/An</code> ```[[SDL_StructureName]]``` <code>structure representing <some piece of information></code>
 |-
 |''Note'': Be sure to hyperlink the structure name as shown.
 |-
 |''Example'': [[SDL_UnionRect]]()
 |-
-|<( |2 30%>''If'' the description mentions a __structure that ''does not'' have a page__
+|<( |2 30%>''If'' the description mentions __a structure that ''does not'' have a page__
 |''Action'': Use the plain English term to describe the structure (ie: SDL_Window == window).
 |-
 |''Note'': These structures may eventually have pages or other references worth linking to, in which case please follow the instructions above for linking to items with pages of their own.
+|-
+|<( |2 30%>''If'' a description refers to any other __page in the API__
+|''Action'': Create a [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink] to the page.
+|-
+|''If'' the page is for an __enumeration__ it is not necessary to describe it as an enumeration as above for structures.
 |-
 |<( |3 30%>''If'' a description is referring to something that could be __any one of a group of similar items__ (ie: rectangles)
 |''Action'': Begin the description with <code>a/an</code>
@@ -192,14 +208,20 @@ The basic format is as follows:
 |-
 |''Note'': We realize that this is a somewhat arbitrary distinction depending upon your perspective.  If you are unsure whether to use <code>a/an</code> or <code>the</code> it may be helpful to do a quick text search for other pages with the same or similar parameter and copy the format there.  Ultimately, though, it's not worth losing sleep over. ;) 
 |-
-|<( |3 30%>''If'' the description is referring __to a specific item from a group__ (ie: a window)
+|<( |3 30%>''If'' a description is referring __to a specific item from a group__ (ie: a window)
 |''Action'': Begin the description with <code>the</code>
 |-
 |''Example'': [[SDL_BlitScaled]]()
 |-
 |''Note'': We realize that this is a somewhat arbitrary distinction depending upon your perspective.  If you are unsure whether to use <code>a/an</code> or <code>the</code> it may be helpful to do a quick text search for other pages with the same or similar parameter and copy the format there.  Ultimately, though, it's not worth losing sleep over. ;) 
+|-
+|<( |3 30%>''If'' __a parameter__ on that page is referenced in another parameter's description
+|''Action'': Use '''[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold]''' for the parameter name.
+|-
+|''Note'': This is a very rare occurrence.
+|-
+|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
 |}
-
 
 
 
@@ -208,7 +230,7 @@ The basic format is as follows:
 <br/>
 <br/>
 === Return Value ===
-The Return Value section provides basic information about what, if anything, a function will return.  
+The Return Value section provides basic information about what, if anything, a function will return upon success or failure.  
 
 Most return values follow one of these 2 basic formats, depending upon whether a call to [[SDL_GetError]]() is relevant:
  ```
