--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -129,7 +129,7 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 * <<Color2(green, Sam: Create API for getting the number of CPUs)>>
 * <<Color2(green, Bob: Create API for atomic operations on data)>>
 * <<Color2(green, Sam: Remove unsafe SDL_KillThread() API)>>
-* <<Color2(green, Sam: Create API for thread priority>>
+* <<Color2(green, Sam: Create API for thread priority)>>
 
 == Timers ==
 
