--- a/SDL_HapticOpenFromJoystick.mediawiki
+++ b/SDL_HapticOpenFromJoystick.mediawiki
@@ -18,7 +18,7 @@ SDL_Haptic* SDL_HapticOpenFromJoystick(SDL_Joystick* joystick)
 |}
 
 == Return Value ==
-Returns a valid haptic device identifier on success or NULL on error; call [[SDL_GetError]]() for more information.
+Returns a valid haptic device identifier on success or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
