--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -133,8 +133,8 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 
 == Timers ==
 
-=== Required ===
-* Sam: Add higher precision timers for profiling
+=== Complete ===
+* <<Color2(green, Sam: Add higher precision timers for profiling)>>
 
 == General ==
 
